--- a/html/Impressum.html
+++ b/html/Impressum.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8" />
+<html lang="de">
+  <head>
+	<link rel="stylesheet" href="Stylesheet.css">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Impressum</title>
-
-	<link rel="stylesheet" href="../css/bootstrap.css">
-	<link rel="stylesheet" href="../css/Stylesheet.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-</head>
-	<body>
-		<div class="pointer">
-			<div class="logo" onclick="window.location.href='start.html'">
-			<img src="../img/DeluxeCar.png"/>
-			</div>
+	<title>Impressum</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	  <link rel="stylesheet" href="../css/bootstrap.css">
+		<link rel="stylesheet" href="../css/Stylesheet.css">
+    <script src="../js/Verkauf1Client.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+	</head>
+  <body>
+	<div class="pointer">
+		<div class="logo" onclick="window.location.href='start.html'">
+	  	<img src="../img/DeluxeCar.png"/>
 		</div>
-		<nav>
-
+	</div>
+	<nav>
 			<ul>
 				<li><a class="navi" href="start.html">Startseite</a></li>
 				<li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
@@ -29,50 +30,78 @@
 			</ul>
 		</nav>
 
-<p>
-<h1>Impressum</h1>
+		<div class="impressum">
+		<p>
+			<h1>Impressum</h1>
 
-Informationspflicht laut § 5 TMG.<br>
+			Informationspflicht laut § 5 TMG.<br>
 
-Deluxe Car Care <br>
-Musterstrasse 1, Stiege 1 Tür 1,<br>
-12345 Musterhausen,<br>
-Deutschland <br>
-
-
-<strong>UID-Nummer:</strong> DE12345678 <br>
-<strong>Wirtschafts-ID:</strong> DE123456789 <br>
-<strong>Register:</strong> Handelsregister <br>
-<strong>Registernummer:</strong> HRB 123456 <br>
-<strong>Registergericht:</strong> Musterhausen <br>
-
-<strong>Tel.:</strong> 01234/56789 <br>
-<strong>Fax:</strong> 01234/56789-0 <br>
-<strong>E-Mail:</strong> office@DeluxeCarCare.de <br>
-
-<strong>Aufsichtsbehörde</strong> <br>
-Bezirkshauptmannschaft Musterhausen <br>
-<strong>Webseite der Aufsichtsbehörde</strong> <br>
-https://www.aufsichtsbeoerde-musterhausen.de/ <br>
-<strong>Anschrift der Aufsichtsbehörde</strong> <br>
-Musterweg 1, 12345 Musterhausen <br>
-
-<strong>Berufsbezeichnung</strong> <br>
-Praktikumsgruppe, Webanwendungen <br>
-
-<strong>Geschäftsführer</strong> <br>
-Leon Mehl, Caspar Trost, Fabian König, Marcus Bronner
-
-</p>
+			Deluxe Car Care <br>
+			Musterstrasse 1, Stiege 1 Tür 1,<br>
+			12345 Musterhausen,<br>
+			Deutschland <br>
 
 
+			<strong>UID-Nummer:</strong> DE12345678 <br>
+			<strong>Wirtschafts-ID:</strong> DE123456789 <br>
+			<strong>Register:</strong> Handelsregister <br>
+			<strong>Registernummer:</strong> HRB 123456 <br>
+			<strong>Registergericht:</strong> Musterhausen <br>
 
+			<strong>Tel.:</strong> 01234/56789 <br>
+			<strong>Fax:</strong> 01234/56789-0 <br>
+			<strong>E-Mail:</strong> office@DeluxeCarCare.de <br>
 
-				<!-- footer -->
-	<div class="footer-basic">
-			<footer>
-				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
-			</footer>
+			<strong>Aufsichtsbehörde</strong> <br>
+			Bezirkshauptmannschaft Musterhausen <br>
+			<strong>Webseite der Aufsichtsbehörde</strong> <br>
+			https://www.aufsichtsbeoerde-musterhausen.de/ <br>
+			<strong>Anschrift der Aufsichtsbehörde</strong> <br>
+			Musterweg 1, 12345 Musterhausen <br>
+
+			<strong>Berufsbezeichnung</strong> <br>
+			Praktikumsgruppe, Webanwendungen <br>
+
+			<strong>Geschäftsführer</strong> <br>
+			Leon Mehl, Caspar Trost, Fabian König, Marcus Bronner
+
+			</p>
 		</div>
-	</body>
+
+
+			<!-- footer -->
+
+
+<div class="footer">
+		<footer>
+      <p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
+		</footer>
+	</div>
+  </body>
 </html>
+
+<!-- jquery functions to send the amound of requested Product to the server and the database -->
+
+
+<!--
+<script>
+
+$("#addProduct").click(function() {
+
+  var obj = {"id":1,"bezeichnung":"ALCLEAR Waschhandschuh","nettopreis":12.99, "kategorie":{"id":1}, "mehrwertsteuer":{"id":1}};
+
+  $.ajax({
+            url: "http://localhost:8000/api/produkt",
+            method: "post",
+    contentType: "application/json",
+    data: JSON.stringify(obj)
+        }).done(function (response) {
+            console.log(response);
+            $("#output").html(JSON.stringify(response));
+        }).fail(function (jqXHR, statusText, error) {
+            console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+            $("#output").html("Ein Fehler ist aufgetreten");
+        });
+    });
+
+</script>
