--- a/html/Kontakt.html
+++ b/html/Kontakt.html
@@ -28,8 +28,13 @@
 				<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
 			</ul>
 		</nav>
-    <p id="Danksagung">Herzlichen Dank für ihre Bestellung</p>
+<div class="kontakt">
+		<h1>Kontakt</h1>
 
+			<p>Falls sie Probleme mit ihrere Bestellung haben oder sonstige Anregungen bzgl. unserem Shop haben, zögern sie nicht uns unter folgender E-Mail zu kontaktieren!</p>
+			<a href="mailto:office@DeluxeCarCare.de">office@DeluxeCarCare.de</a>
+
+</div>
 
 
 				<!-- footer -->
