--- a/html/Verkauf2.html
+++ b/html/Verkauf2.html
@@ -30,17 +30,18 @@
 		</nav>
 
 	<div class="currentposition"><h7>Polituren und Poliermaschinen</h7></div>
+  <div class="pointer1">
 
 	<div class="container wasdienedgeschafthaben">
 			<div class="row">
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="../img/Menzerna400.jpg">
 													<img class="pic-2" src="../img/Menzerna400.jpg">
-											</a>
-													<a class="add-to-cart" href="">Sehr Starke Politur, um sehr tiefe Kratzer zu korrigieren.</a>
+
+													<p class="add-to-cart">Sehr Starke Politur, um sehr tiefe Kratzer zu korrigieren.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">Menzerna 400</br>13,99 €</br>inkl. MwSt.</h3>
@@ -52,12 +53,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 								<div class="product-image2">
-										<a href="">
+
 												<img class="pic-1" src="../img/Menzerna1000.jpg">
 												<img class="pic-2" src="../img/Menzerna1000.jpg">
-										</a>
 
-										<a class="add-to-cart" href=""> Starke Politur, um tiefere Kratzer zu korrigieren.</a>
+
+										<p class="add-to-cart" > Starke Politur, um tiefere Kratzer zu korrigieren.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">Menzerna 1000</br>11,99 €</br>inkl. MwSt.</h3>
@@ -69,12 +70,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="../img/Menzerna2500.jpg">
 													<img class="pic-2" src="../img/Menzerna2500.jpg">
-											</a>
 
-											<a class="add-to-cart" href="">Mittelstarke Politur, um mittlere und leichte Kratzer zu korrigieren.</a>
+
+											<p class="add-to-cart">Mittelstarke Politur, um mittlere und leichte Kratzer zu korrigieren.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">Menzerna 2500</br>11,49 €</br>inkl. MwSt.</h3>
@@ -86,12 +87,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="../img/Menzerna3500.jpg">
 													<img class="pic-2" src="../img/Menzerna3500.jpg">
-											</a>
 
-											<a class="add-to-cart" href="">Hochglanzpolitur, um leichte Kratzer und Hologramme zu entfernen.</a>
+
+											<p class="add-to-cart">Hochglanzpolitur, um leichte Kratzer und Hologramme zu entfernen.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">Menzerna 3500</br>12,99 €</br>inkl. MwSt.</h3>
@@ -103,11 +104,11 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jWpg%2B4qHL._AC_SY450_.jpg">
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/615CMajGm0L._AC_SY450_.jpg">
-											</a>
-											<a class="add-to-cart" href="">Einsteiger Poliermaschine, mit einem guten Preis-Leistungs-Verhältnis.</a>
+
+											<p class="add-to-cart">Einsteiger Poliermaschine, mit einem guten Preis-Leistungs-Verhältnis.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">DINO Kraftpaket 9mm</br>69,99 €</br>inkl. MwSt.</h3>
@@ -119,12 +120,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/610z0xMLrjL._AC_SX425_.jpg">
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/51GAAh-chaL._AC_SY606_.jpg">
-											</a>
 
-											<a class="add-to-cart" href="">Profi Poliermaschine, für lange und intensive Einsätze geeignet.</a>
+
+											<p class="add-to-cart">Profi Poliermaschine, für lange und intensive Einsätze geeignet.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">Rupes BigFoot</br>399,90 €</br>inkl. MwSt.</h3>
@@ -133,6 +134,7 @@
 									</div>
 							</div>
 					</div>
+        </div>
 
 			</div>
 	</div>
