--- a/html/order_process.html
+++ b/html/order_process.html
@@ -95,13 +95,13 @@
 		</div>
 
 						<!-- footer -->
-		<div class="container">
-		<div class="footer-basic">
+
+		<div class="footer-basic-process">
 			<footer>
 				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
 			</footer>
 		</div>
-	</div>
+
 
 	</body>
 </html>
