--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -31,8 +31,8 @@
 		</nav>
 
 	<div class="currentposition"><h7>Handwäsche</h7></div>
-
-	<div class="container wasdienedgeschafthaben">
+<div class="pointer1">
+  <div class="container wasdienedgeschafthaben">
 			<div class="row">
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
@@ -70,12 +70,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41T7WahKIsL._AC_.jpg">
 													<img class="pic-2" src="../img/Spruehkoepfe.jpg">
-											</a>
 
-											<a class="add-to-cart" href="">Schaumsprühe für die Vorwäsche, hiermit können gröbere Verschmutzungen angelöst werden.</a>
+
+											<p class="add-to-cart">Schaumsprühe für die Vorwäsche, hiermit können gröbere Verschmutzungen angelöst werden.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">Gloria FM10</br>29,99 €</br>inkl. MwSt.</h3>
@@ -87,12 +87,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="https://www.amazon.de/GLORIA-Top-Foam-Auto-Shampoo-Konzentrat/dp/B07J5LZHJ7/ref=sr_1_4?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=gloria+top+foam&qid=1560949885&s=gateway&sr=8-4">
+
 													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jmMJRxtNL._SL1500_.jpg">
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71gqfzhXf5L._SL1500_.jpg">
-											</a>
 
-											<a class="add-to-cart" href="">Schaumsprüher-Füllung für die Vorwäsche, kann z.B. für die Gloria FM10 genutzt werden.</a>
+
+											<p class="add-to-cart">Schaumsprüher-Füllung für die Vorwäsche, kann z.B. für die Gloria FM10 genutzt werden.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">GLORIA Top Foam</br>14,99 €</br>inkl. MwSt.</h3>
@@ -104,11 +104,11 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.polarautovaruste.com%2Fgraphics%2Fproducts%2Fthumbnails%2Fppicn_sonax_autoshampoo_cf6bdbe0.jpg&f=1">
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81aZpYobFKL._SL1500_.jpg">
-											</a>
-											<a class="add-to-cart" href="">Shampoo für die Autowäsche.</a>
+
+											<p class="add-to-cart">Shampoo für die Autowäsche.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">SONAX AutoShampoo</br>5,79 €</br>inkl. MwSt.</h3>
@@ -120,12 +120,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
-											</a>
 
-											<a class="add-to-cart" href="">Lackknete für das Auto, um Verschmutzungen wie Teer, eingebrannte Insekten, Flugrost etc. zu entfernen.</a>
+
+											<p class="add-to-cart">Lackknete für das Auto, um Verschmutzungen wie Teer, eingebrannte Insekten, Flugrost etc. zu entfernen.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">Petzolds Lackknete</br>16,90 €</br>inkl. MwSt.</h3>
@@ -137,6 +137,7 @@
 
 			</div>
 	</div>
+</div>
 	<hr>
 			<!-- footer -->
 
