--- a/html/Verkauf3.html
+++ b/html/Verkauf3.html
@@ -30,17 +30,18 @@
 		</nav>
 
 	<div class="currentposition"><h7>Versiegelungen und Wachse</h7></div>
+  <div class="pointer1">
 
 	<div class="container wasdienedgeschafthaben">
 			<div class="row">
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="../img/Fusso.jpg">
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/41vZUPuiPHL._AC_SY355_.jpg">
-											</a>
-													<a class="add-to-cart" href="">Wachs mit sehr gutem Apperleffekt und langer Standzeit.</a>
+
+													<p class="add-to-cart">Wachs mit sehr gutem Apperleffekt und langer Standzeit.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">Soft99 Fusso Coat 12M</br>34,99 €</br>inkl. MwSt.</h3>
@@ -52,12 +53,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 								<div class="product-image2">
-										<a href="">
+
 												<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/712i%2BFQjqwL._AC_SY606_.jpg">
 												<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/910l%2BsQXswL._AC_SX355_.jpg">
-										</a>
 
-										<a class="add-to-cart" href=""> Sprühwachs, hiermit kann man das Soft99 Fusso Coat 12M pflegen.</a>
+
+										<p class="add-to-cart"> Sprühwachs, hiermit kann man das Soft99 Fusso Coat 12M pflegen.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">Soft99 Fusso Coat Detailer</br>19,99 €</br>inkl. MwSt.</h3>
@@ -69,12 +70,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="../img/ADBL.jpg">
 													<img class="pic-2" src="../img/ADBL.jpg">
-											</a>
 
-											<a class="add-to-cart" href="">Sprühwachs mit einem guten Apperleffekt und mittlerer Standzeit.</a>
+
+											<p class="add-to-cart">Sprühwachs mit einem guten Apperleffekt und mittlerer Standzeit.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">ADBL Synthetic Spray Wax</br>23,49 €</br>inkl. MwSt.</h3>
@@ -86,12 +87,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="../img/Swissvax.jpg">
 													<img class="pic-2" src="../img/Swissvax.jpg">
-											</a>
 
-											<a class="add-to-cart" href="">Hochwertiges Carnaubawachs, um Felgen zu versiegeln.</a>
+
+											<p class="add-to-cart">Hochwertiges Carnaubawachs, um Felgen zu versiegeln.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">SWISSVAX SWIZÖL Autobahn</br>39,99 €</br>inkl. MwSt.</h3>
@@ -103,11 +104,11 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/81FIwjhjUdL._AC_SX355_.jpg">
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81FIwjhjUdL._AC_SX355_.jpg">
-											</a>
-											<a class="add-to-cart" href="">Hochwertige Keramikversiegelung mit sehr langer Standzeit.</a>
+
+											<p class="add-to-cart" >Hochwertige Keramikversiegelung mit sehr langer Standzeit.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">Gyeon Keramikversiegelung Q2 One</br>69,99 €</br>inkl. MwSt.</h3>
@@ -119,12 +120,12 @@
 					<div class="col-md-3 col-sm-6">
 							<div class="product-grid2">
 									<div class="product-image2">
-											<a href="">
+
 													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61Id6ErWKVL._AC_SY355_.jpg">
 													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61Id6ErWKVL._AC_SY355_.jpg">
-											</a>
 
-											<a class="add-to-cart" href="">Hochwertige Nanoversiegelung mit sehr langer Standzeit.</a>
+
+											<p class="add-to-cart">Hochwertige Nanoversiegelung mit sehr langer Standzeit.</p>
 									</div>
 									<div class="product-content">
 											<h3 class="title">Koch Chemie 1K-Nano Lackversiegelung</br>114,90 €</br>inkl. MwSt.</h3>
@@ -133,6 +134,7 @@
 									</div>
 							</div>
 					</div>
+        </div>
 
 			</div>
 	</div>
