--- a/html/Kontakt.html
+++ b/html/Kontakt.html
@@ -28,7 +28,7 @@
 				<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
 			</ul>
 		</nav>
-<div class="kontakt">
+<div class="kontakt" style="margin-left:30px;">
 		<h1>Kontakt</h1>
 
 			<p>Falls sie Probleme mit ihrere Bestellung haben oder sonstige Anregungen bzgl. unserem Shop haben, zögern sie nicht uns unter folgender E-Mail zu kontaktieren!</p>
