--- a/html/order_confirm.html
+++ b/html/order_confirm.html
@@ -28,7 +28,7 @@
 				<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
 			</ul>
 		</nav>
-		<div class="kontakt" style="margin-left:30px;">
+		<div class="kontakt" style="margin-left:30px;margin-top:15px;">
 				<h1>Vielen Dank für ihre Bestellung!</h1>
 				<u><h4>Ihre Bestellung:</h4></u>
 				<div class="container wasdienedgeschafthaben">
