--- a/html/Impressum.html
+++ b/html/Impressum.html
@@ -30,7 +30,7 @@
 			</ul>
 		</nav>
 
-		<div class="impressum" style="margin-left:30px;">
+		<div style="margin-left:30px;">
 		<p>
 			<h1>Impressum</h1>
 
