--- a/html/Warenkorb.html
+++ b/html/Warenkorb.html
@@ -38,49 +38,57 @@
       <th>Artikel</th>
       <th>Menge</th>
       <th>Stückpreis</th>
+      <th>Mengenpreis</th>
 	</tr>
 
     <tr>
-      <td>Gloria FM10</td>
-      <td>3</td>
+      <td><a href="Verkauf1.html">Gloria FM10</a></td>
+      <td><input step="1" data-step-max="10" type="number" value="3" data-decimals="0" min="0" max="360" class="col-3"/></td>
       <td>29,99 €</td>
+      <td>89,97 €</td>
       <td><button class="button">X</button></td>
 	</div>
     </tr>
     <tr>
-      <td>SONAX AutoShampoo</td>
-      <td >1</td>
+      <td><a href="Verkauf1.html">SONAX AutoShampoo</a></td>
+      <td ><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="0" max="360" class="col-3"/></td>
+      <td>5,79 €</td>
       <td>5,79 €</td>
       <td><button class="button">X</button></td>
 
     </tr>
     <tr>
-        <td>Menzerna 400</td>
-        <td>1</td>
+        <td><a href="Verkauf2.html">Menzerna 400</a></td>
+        <td><input step="1" data-step-max="10" type="number" value="2" data-decimals="0" min="0" max="360" class="col-3"/></td>
         <td>13,99 €</td>
+        <td>27,89 €</td>
         <td><button class="button">X</button></td>
     </tr>
     <tr>
-        <td valigin:center>SWISSVAX SWIZÖL Autobahn</td>
-        <td>1</td>
+        <td><a href="Verkauf3.html">SWISSVAX SWIZÖL Autobahn</a></td>
+        <td><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="0" max="360" class="col-3"/></td>
+        <td>39,99 €</td>
         <td>39,99 €</td>
         <td><button class="button">X</button></td>
   </tr>
   <tr></tr>
   <tr>
 	<td></td>
-	<td>inkl. 19% MwSt.</td>
-	<td>17,05 €</td>
+	<td></td>
+  <td>inkl. 19% MwSt.</td>
+  <td>17,05 €</td>
   </tr>
 
   <tr>
     <td>Gesamtkosten:</td>
     <td></td>
-    <td>89,76 €</td>
+    <td></td>
+    <td>180,87 €</td>
     <td></td>
 </tr>
 <tr>
   <td valigin:center></td>
+  <td></td>
   <td></td>
   <td><a href="order_process.html"><button>Weiter zur </br>Bestellung</button></a></td>
   <td></td>
