--- a/html/Impressum.html
+++ b/html/Impressum.html
@@ -68,11 +68,10 @@
 			</p>
 		</div>
 
-
 			<!-- footer -->
 
 
-<div class="footer">
+<div class="footer-basic">
 		<footer>
       <p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
 		</footer>
