--- a/html/order_confirm.html
+++ b/html/order_confirm.html
@@ -39,27 +39,27 @@
 				<tr>
 					<th>Artikel</th>
 					<th>Menge</th>
-					<th>Stückpreis</th>
+					<th>Mengenpreis</th>
 			</tr>
 
 				<tr>
 					<td>Gloria FM10</td>
 					<td>3</td>
-					<td>29,99 €</td>
+					<td>89,97 €</td>
 
 			</div>
 				</tr>
 				<tr>
 					<td>SONAX AutoShampoo</td>
-					<td >1</td>
+					<td>1</td>
 					<td>5,79 €</td>
 
 
 				</tr>
 				<tr>
 						<td>Menzerna 400</td>
-						<td>1</td>
-						<td>13,99 €</td>
+						<td>2</td>
+						<td>27,89 €</td>
 
 				</tr>
 				<tr>
@@ -72,13 +72,13 @@
 			<tr>
 			<td></td>
 			<td>inkl. 19% MwSt.</td>
-			<td>17,05 €</td>
+			<td>34,37 €</td>
 			</tr>
 
 			<tr>
 				<td>Gesamtkosten:</td>
 				<td></td>
-				<td>89,76 €</td>
+				<td>180,87 €</td>
 				<td></td>
 		</tr>
 
