--- a/html/order_confirm.html
+++ b/html/order_confirm.html
@@ -30,7 +30,7 @@
 		</nav>
 		<div class="kontakt" style="margin-left:30px;margin-top:15px;">
 				<h1>Vielen Dank für ihre Bestellung!</h1>
-				<u><h4>Ihre Bestellung:</h4></u>
+				<u><h4>Ihre Bestellung vom 12.04.2020 19:45 Uhr:</h4></u>
 				<div class="container wasdienedgeschafthaben">
 					<div class="row">
 		<table>
