--- a/html/order_confirm.html
+++ b/html/order_confirm.html
@@ -29,7 +29,7 @@
 			</ul>
 		</nav>
 		<div class="kontakt" style="margin-left:30px;margin-top:15px;">
-				<h1>Vielen Dank für ihre Bestellung!</h1>
+				<h1>Vielen Dank für ihre Bestellung!</h1><button id="PrintButton">Drucken</button>
 				<u><h4>Ihre Bestellung vom 12.04.2020 19:45 Uhr:</h4></u>
 				<div class="container wasdienedgeschafthaben">
 					<div class="row">
