--- a/html/order_confirm_uber.html
+++ b/html/order_confirm_uber.html
@@ -11,6 +11,29 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
+	<style>
+		* {
+		  box-sizing: border-box;
+		}
+		
+		/* Create two equal columns that floats next to each other */
+		.column {
+		  float: left;
+		  width: 50%;
+		  padding: 10px;
+		  height: 300px; /* Should be removed. Only for demonstration */
+		}
+		
+		/* Clear floats after the columns */
+		.row:after {
+		  content: "";
+		  display: table;
+		  clear: both;
+		}
+		</style>
+
+
 </head>
 	<body>
 		<div class="pointer">
@@ -29,11 +52,11 @@
 			</ul>
 		</nav>
 		<div class="kontakt" style="margin-left:30px;margin-top:15px;">
-			<h1 style="text-align: center;">Vielen Dank für ihre Bestellung!</h1>
-			<h2 style="text-align: center;">Ihre Bestellung vom 12.04.2020 19:45 Uhr:</h2>
-			<div style="text-align: center;" class="wrapper">
-			<input onclick="window.print()" type="image" src="../img/Drucken.png" alt="Drucken">
-			</div>
+				<h1 style="text-align: center;">Vielen Dank für ihre Bestellung!</h1>
+				<h2 style="text-align: center;">Ihre Bestellung vom 12.04.2020 19:45 Uhr:</h2>
+				<div style="text-align: center;" class="wrapper">
+				<input onclick="window.print()" type="image" src="../img/Drucken.png" alt="Drucken">
+				</div>
 				<div class="container wasdienedgeschafthaben">
 					<div class="row">
 		<table>
@@ -94,18 +117,25 @@
 				</div>
 			</div>
 
+	<h2>Ihre Zahlungsweise: Überweisung</h2>
 
-			<h2 style="text-align: center;">Ihre Zahlungsweise: Paypal</h2>
-
-	<div class="column">
-		<h2 style="text-align: left;">Ihre Lieferanschrift:</h2>
-		<p style="text-align: left;">Vorname: Max</p>
-		<p style="text-align: left;">Nachname: Muster</p>
-		<p style="text-align: left;">Straße/Hausnummer: Musterstraße 5</p>
-		<p style="text-align: left;">PLZ: 11111</p>
-		<p style="text-align: left;">Ort: Musterhausen</p>
+	<div class="row">
+	  <div class="column">
+		<h2>Unsere Bankverbindung:</h2>
+		<p style="text-align: justify;">Bitte überweisen sie den Betrag von 180,87 € an folgende Bankverbindung:</p>
+		<p style="text-align: justify;"><b>Deluxe Car Care</b></p>
+		<p style="text-align: justify;"><b>Bank: Musterbank</b></p>
+		<p style="text-align: justify;"><b>IBAN: DE 12 3456 7890 1234 5678</b></p>
 	  </div>
-
+	  <div class="column">
+		<h2>Ihre Lieferanschrift:</h2>
+		<p style="text-align: justify;">Vorname: Max</p>
+		<p style="text-align: justify;">Nachname: Muster</p>
+		<p style="text-align: justify;">Straße/Hausnummer: Musterstraße 5</p>
+		<p style="text-align: justify;">PLZ: 11111</p>
+		<p style="text-align: justify;">Ort: Musterhausen</p>
+	  </div>
+	</div>
 
 </div>
 <hr>
