--- a/html/Verkauf3.html
+++ b/html/Verkauf3.html
@@ -1,150 +1,155 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-	<link rel="stylesheet" href="Stylesheet.css">
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Versiegelungen und Wachse</title>
-	<link rel="stylesheet" href="../css/bootstrap.css">
-		<link rel="stylesheet" href="../css/Stylesheet.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-	</head>
-  <body>
-    <div class="pointer">
-		<div class="logo" onclick="window.location.href='start.html'">
-	  	<img src="../img/DeluxeCar.png"/>
-		</div>
-	</div>
-	<nav>
 
-			<ul>
-				<li><a class="navi" href="start.html">Startseite</a></li>
-				<li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-				<li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-				<li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
-				<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
-			</ul>
-		</nav>
+<head>
+  <link rel="stylesheet" href="Stylesheet.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Versiegelungen und Wachse</title>
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/Stylesheet.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+</head>
 
-	<div class="currentposition"><h7>Versiegelungen und Wachse</h7></div>
+<body>
+  <div class="pointer">
+    <div class="logo" onclick="window.location.href='start.html'">
+      <img src="../img/DeluxeCar.png" />
+    </div>
+  </div>
+  <nav>
+
+    <ul>
+      <li><a class="navi" href="start.html">Startseite</a></li>
+      <li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
+      <li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
+      <li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
+      <li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
+    </ul>
+  </nav>
+
+  <div class="currentposition">
+    <h7>Versiegelungen und Wachse</h7>
+  </div>
   <div class="pointer1">
 
-	<div class="container wasdienedgeschafthaben">
-			<div class="row">
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
+    <div class="container wasdienedgeschafthaben">
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
 
-													<img class="pic-1" src="../img/Fusso.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/41vZUPuiPHL._AC_SY355_.jpg">
+              <img class="pic-1" src="../img/Fusso.jpg">
+              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/41vZUPuiPHL._AC_SY355_.jpg">
 
-													<p class="add-to-cart">Wachs mit sehr gutem Apperleffekt und langer Standzeit.</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">Soft99 Fusso Coat 12M</br>34,99 €</br>inkl. MwSt.</h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-								<div class="product-image2">
-
-												<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/712i%2BFQjqwL._AC_SY606_.jpg">
-												<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/910l%2BsQXswL._AC_SX355_.jpg">
-
-
-										<p class="add-to-cart"> Sprühwachs, hiermit kann man das Soft99 Fusso Coat 12M pflegen.</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">Soft99 Fusso Coat Detailer</br>19,99 €</br>inkl. MwSt.</h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-
-													<img class="pic-1" src="../img/ADBL.jpg">
-													<img class="pic-2" src="../img/ADBL.jpg">
-
-
-											<p class="add-to-cart">Sprühwachs mit einem guten Apperleffekt und mittlerer Standzeit.</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">ADBL Synthetic Spray Wax</br>23,49 €</br>inkl. MwSt.</h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-
-													<img class="pic-1" src="../img/Swissvax.jpg">
-													<img class="pic-2" src="../img/Swissvax.jpg">
-
-
-											<p class="add-to-cart">Hochwertiges Carnaubawachs, um Felgen zu versiegeln.</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">SWISSVAX SWIZÖL Autobahn</br>39,99 €</br>inkl. MwSt.</h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/81FIwjhjUdL._AC_SX355_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81FIwjhjUdL._AC_SX355_.jpg">
-
-											<p class="add-to-cart" >Hochwertige Keramikversiegelung mit sehr langer Standzeit.</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">Gyeon Keramikversiegelung Q2 One</br>69,99 €</br>inkl. MwSt.</h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61Id6ErWKVL._AC_SY355_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61Id6ErWKVL._AC_SY355_.jpg">
-
-
-											<p class="add-to-cart">Hochwertige Nanoversiegelung mit sehr langer Standzeit.</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">Koch Chemie 1K-Nano Lackversiegelung</br>114,90 €</br>inkl. MwSt.</h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
+              <p class="add-to-cart">Wachs mit sehr gutem Apperleffekt und langer Standzeit.</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">Soft99 Fusso Coat 12M</br>34,99 €</br>inkl. MwSt.</h3>
+              <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button>In den Warenkorb</button>
+            </div>
+          </div>
         </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
 
-			</div>
-	</div>
-	<hr>
-			<!-- footer -->
+              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/712i%2BFQjqwL._AC_SY606_.jpg">
+              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/910l%2BsQXswL._AC_SX355_.jpg">
 
-<div class="footer-basic">
-		<footer>
+
+              <p class="add-to-cart"> Sprühwachs, hiermit kann man das Soft99 Fusso Coat 12M pflegen.</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">Soft99 Fusso Coat Detailer</br>19,99 €</br>inkl. MwSt.</h3>
+              <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button>In den Warenkorb</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
+
+              <img class="pic-1" src="../img/ADBL.jpg">
+              <img class="pic-2" src="../img/ADBL.jpg">
+
+
+              <p class="add-to-cart">Sprühwachs mit einem guten Apperleffekt und mittlerer Standzeit.</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">ADBL Synthetic Spray Wax</br>23,49 €</br>inkl. MwSt.</h3>
+              <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button>In den Warenkorb</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
+
+              <img class="pic-1" src="../img/Swissvax.jpg">
+              <img class="pic-2" src="../img/Swissvax.jpg">
+
+
+              <p class="add-to-cart">Hochwertiges Carnaubawachs, um Felgen zu versiegeln.</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">SWISSVAX SWIZÖL Autobahn</br>39,99 €</br>inkl. MwSt.</h3>
+              <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button>In den Warenkorb</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
+
+              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/81FIwjhjUdL._AC_SX355_.jpg">
+              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81FIwjhjUdL._AC_SX355_.jpg">
+
+              <p class="add-to-cart">Hochwertige Keramikversiegelung mit sehr langer Standzeit.</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">Gyeon Keramikversiegelung Q2 One</br>69,99 €</br>inkl. MwSt.</h3>
+              <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button>In den Warenkorb</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
+
+              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61Id6ErWKVL._AC_SY355_.jpg">
+              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61Id6ErWKVL._AC_SY355_.jpg">
+
+
+              <p class="add-to-cart">Hochwertige Nanoversiegelung mit sehr langer Standzeit.</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">Koch Chemie 1K-Nano Lackversiegelung</br>114,90 €</br>inkl. MwSt.</h3>
+              <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button>In den Warenkorb</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <hr>
+  <!-- footer -->
+
+  <div class="footer-basic">
+    <footer>
       <p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
-		</footer>
-	</div>
-  </body>
+    </footer>
+  </div>
+</body>
+
 </html>
