--- a/html/order_confirm_uber.html
+++ b/html/order_confirm_uber.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bestellbestätigung</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Bestellbestätigung</title>
 
 	<link rel="stylesheet" href="../css/bootstrap.css">
 	<link rel="stylesheet" href="../css/Stylesheet.css">
@@ -14,91 +15,93 @@
 
 	<style>
 		* {
-		  box-sizing: border-box;
+			box-sizing: border-box;
 		}
-		
+
 		/* Create two equal columns that floats next to each other */
 		.column {
-		  float: left;
-		  width: 50%;
-		  padding: 10px;
-		  height: 300px; /* Should be removed. Only for demonstration */
+			float: left;
+			width: 50%;
+			padding: 10px;
+			height: 300px;
+			/* Should be removed. Only for demonstration */
 		}
-		
+
 		/* Clear floats after the columns */
 		.row:after {
-		  content: "";
-		  display: table;
-		  clear: both;
+			content: "";
+			display: table;
+			clear: both;
 		}
-		</style>
+	</style>
 
 
 </head>
-	<body>
-		<div class="pointer">
-			<div class="logo" onclick="window.location.href='start.html'">
-			<img src="../img/DeluxeCar.png"/>
-			</div>
+
+<body>
+	<div class="pointer">
+		<div class="logo" onclick="window.location.href='start.html'">
+			<img src="../img/DeluxeCar.png" />
 		</div>
-		<nav>
+	</div>
+	<nav>
 
-			<ul>
-				<li><a class="navi" href="start.html">Startseite</a></li>
-				<li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-				<li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-				<li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
-				<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
-			</ul>
-		</nav>
-		<div class="kontakt" style="margin-left:30px;margin-top:15px;">
-				<h1 style="text-align: center;">Vielen Dank für ihre Bestellung!</h1>
-				<h2 style="text-align: center;">Ihre Bestellung vom 12.04.2020 19:45 Uhr:</h2>
-				<div style="text-align: center;" class="wrapper">
-				<input onclick="window.print()" type="image" src="../img/Drucken.png" alt="Drucken">
-				</div>
-				<div class="container wasdienedgeschafthaben">
-					<div class="row">
-		<table>
+		<ul>
+			<li><a class="navi" href="start.html">Startseite</a></li>
+			<li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
+			<li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
+			<li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
+			<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
+		</ul>
+	</nav>
+	<div class="kontakt" style="margin-left:30px;margin-top:15px;">
+		<h1 style="text-align: center;">Vielen Dank für ihre Bestellung!</h1>
+		<h2 style="text-align: center;">Ihre Bestellung vom 12.04.2020 19:45 Uhr:</h2>
+		<div style="text-align: center;" class="wrapper">
+			<input onclick="window.print()" type="image" src="../img/Drucken.png" alt="Drucken">
+		</div>
+		<div class="container wasdienedgeschafthaben">
+			<div class="row">
+				<table>
 
 
-				<tr>
-					<th>Artikel</th>
-					<th>Menge</th>
-					<th>Mengenpreis</th>
-			</tr>
+					<tr>
+						<th>Artikel</th>
+						<th>Menge</th>
+						<th>Mengenpreis</th>
+					</tr>
 
-				<tr>
-					<td>Gloria FM10</td>
-					<td>3</td>
-					<td>89,97 €</td>
+					<tr>
+						<td>Gloria FM10</td>
+						<td>3</td>
+						<td>89,97 €</td>
 
 			</div>
-				</tr>
-				<tr>
-					<td>SONAX AutoShampoo</td>
-					<td>1</td>
-					<td>5,79 €</td>
+			</tr>
+			<tr>
+				<td>SONAX AutoShampoo</td>
+				<td>1</td>
+				<td>5,79 €</td>
 
 
-				</tr>
-				<tr>
-						<td>Menzerna 400</td>
-						<td>2</td>
-						<td>27,89 €</td>
+			</tr>
+			<tr>
+				<td>Menzerna 400</td>
+				<td>2</td>
+				<td>27,89 €</td>
 
-				</tr>
-				<tr>
-						<td valigin:center>SWISSVAX SWIZÖL Autobahn</td>
-						<td>1</td>
-						<td>39,99 €</td>
+			</tr>
+			<tr>
+				<td valigin:center>SWISSVAX SWIZÖL Autobahn</td>
+				<td>1</td>
+				<td>39,99 €</td>
 
 			</tr>
 			<tr></tr>
 			<tr>
-			<td></td>
-			<td>inkl. 19% MwSt.</td>
-			<td>34,37 €</td>
+				<td></td>
+				<td>inkl. 19% MwSt.</td>
+				<td>34,37 €</td>
 			</tr>
 
 			<tr>
@@ -106,7 +109,7 @@
 				<td></td>
 				<td>180,87 €</td>
 				<td></td>
-		</tr>
+			</tr>
 
 
 
@@ -114,37 +117,38 @@
 
 
 
-				</div>
-			</div>
+		</div>
+	</div>
 
 	<h2>Ihre Zahlungsweise: Überweisung</h2>
 
 	<div class="row">
-	  <div class="column">
-		<h2>Unsere Bankverbindung:</h2>
-		<p style="text-align: justify;">Bitte überweisen sie den Betrag von 180,87 € an folgende Bankverbindung:</p>
-		<p style="text-align: justify;"><b>Deluxe Car Care</b></p>
-		<p style="text-align: justify;"><b>Bank: Musterbank</b></p>
-		<p style="text-align: justify;"><b>IBAN: DE 12 3456 7890 1234 5678</b></p>
-	  </div>
-	  <div class="column">
-		<h2>Ihre Lieferanschrift:</h2>
-		<p style="text-align: justify;">Vorname: Max</p>
-		<p style="text-align: justify;">Nachname: Muster</p>
-		<p style="text-align: justify;">Straße/Hausnummer: Musterstraße 5</p>
-		<p style="text-align: justify;">PLZ: 11111</p>
-		<p style="text-align: justify;">Ort: Musterhausen</p>
-	  </div>
+		<div class="column">
+			<h2>Unsere Bankverbindung:</h2>
+			<p style="text-align: justify;">Bitte überweisen sie den Betrag von 180,87 € an folgende Bankverbindung:</p>
+			<p style="text-align: justify;"><b>Deluxe Car Care</b></p>
+			<p style="text-align: justify;"><b>Bank: Musterbank</b></p>
+			<p style="text-align: justify;"><b>IBAN: DE 12 3456 7890 1234 5678</b></p>
+		</div>
+		<div class="column">
+			<h2>Ihre Lieferanschrift:</h2>
+			<p style="text-align: justify;">Vorname: Max</p>
+			<p style="text-align: justify;">Nachname: Muster</p>
+			<p style="text-align: justify;">Straße/Hausnummer: Musterstraße 5</p>
+			<p style="text-align: justify;">PLZ: 11111</p>
+			<p style="text-align: justify;">Ort: Musterhausen</p>
+		</div>
 	</div>
 
-</div>
-<hr>
+	</div>
+	<hr>
 
-				<!-- footer -->
+	<!-- footer -->
 	<div class="footer-basic">
-			<footer>
-				<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
-			</footer>
-		</div>
-	</body>
+		<footer>
+			<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
+		</footer>
+	</div>
+</body>
+
 </html>
