--- a/html/Verkauf1.html
+++ b/html/Verkauf1.html
@@ -1,153 +1,158 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-	<link rel="stylesheet" href="Stylesheet.css">
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Handwäsche</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	  <link rel="stylesheet" href="../css/bootstrap.css">
-		<link rel="stylesheet" href="../css/Stylesheet.css">
-    <script src="../js/Verkauf1Client.js"></script>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-	</head>
-  <body>
-	<div class="pointer">
-		<div class="logo" onclick="window.location.href='start.html'">
-	  	<img src="../img/DeluxeCar.png"/>
-		</div>
-	</div>
-	<nav>
-			<ul>
-				<li><a class="navi" href="start.html">Startseite</a></li>
-				<li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-				<li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-				<li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
-				<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
-			</ul>
-		</nav>
 
-	<div class="currentposition"><h7>Handwäsche</h7></div>
-<div class="pointer1">
-  <div class="container wasdienedgeschafthaben">
-			<div class="row">
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
+<head>
+  <link rel="stylesheet" href="Stylesheet.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Handwäsche</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/Stylesheet.css">
+  <script src="../js/Verkauf1Client.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+</head>
 
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg">
+<body>
+  <div class="pointer">
+    <div class="logo" onclick="window.location.href='start.html'">
+      <img src="../img/DeluxeCar.png" />
+    </div>
+  </div>
+  <nav>
+    <ul>
+      <li><a class="navi" href="start.html">Startseite</a></li>
+      <li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
+      <li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
+      <li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
+      <li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
+    </ul>
+  </nav>
 
-													<p class="add-to-cart">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">ALCLEAR Waschhandschuh</br>12,99 €</br>inkl. MwSt.</h3>
-											<input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button id="addProduct" onclick="Input1()">In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-								<div class="product-image2">
+  <div class="currentposition">
+    <h7>Handwäsche</h7>
+  </div>
+  <div class="pointer1">
+    <div class="container wasdienedgeschafthaben">
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
 
-												<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51yi-JJt6PL._AC_SY355_.jpg">
-												<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61mrtbNymWL._AC_SY450_.jpg">
+              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/716iMjDLDoL._AC_SY550_.jpg">
+              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81Xnmqr5wNL._AC_SX466_.jpg">
 
+              <p class="add-to-cart">Mikrofaser Waschhandschuh, mit dem man das Auto kratzerfrei reinigen kann</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">ALCLEAR Waschhandschuh</br>12,99 €</br>inkl. MwSt.</h3>
+              <input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button id="addProduct" onclick="Input1()">In den Warenkorb</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
 
-										<p class="add-to-cart">Wascheimer mit Grit Guard Einsatz, um Kratzer bei der Wäsche zu minimieren.</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">2x Eimer mit Grit Guard</br>54,99 €</br>inkl. MwSt.</h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41T7WahKIsL._AC_.jpg">
-													<img class="pic-2" src="../img/Spruehkoepfe.jpg">
+              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/51yi-JJt6PL._AC_SY355_.jpg">
+              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/61mrtbNymWL._AC_SY450_.jpg">
 
 
-											<p class="add-to-cart">Schaumsprühe für die Vorwäsche, hiermit können gröbere Verschmutzungen angelöst werden.</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">Gloria FM10</br>29,99 €</br>inkl. MwSt.</h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
+              <p class="add-to-cart">Wascheimer mit Grit Guard Einsatz, um Kratzer bei der Wäsche zu minimieren.</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">2x Eimer mit Grit Guard</br>54,99 €</br>inkl. MwSt.</h3>
+              <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button>In den Warenkorb</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
 
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jmMJRxtNL._SL1500_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71gqfzhXf5L._SL1500_.jpg">
-
-
-											<p class="add-to-cart">Schaumsprüher-Füllung für die Vorwäsche, kann z.B. für die Gloria FM10 genutzt werden.</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">GLORIA Top Foam</br>14,99 €</br>inkl. MwSt.</h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-
-													<img class="pic-1" src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.polarautovaruste.com%2Fgraphics%2Fproducts%2Fthumbnails%2Fppicn_sonax_autoshampoo_cf6bdbe0.jpg&f=1">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81aZpYobFKL._SL1500_.jpg">
-
-											<p class="add-to-cart">Shampoo für die Autowäsche.</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">SONAX AutoShampoo</br>5,79 €</br>inkl. MwSt.</h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-							<div class="product-grid2">
-									<div class="product-image2">
-
-													<img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
-													<img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
+              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/41T7WahKIsL._AC_.jpg">
+              <img class="pic-2" src="../img/Spruehkoepfe.jpg">
 
 
-											<p class="add-to-cart">Lackknete für das Auto, um Verschmutzungen wie Teer, eingebrannte Insekten, Flugrost etc. zu entfernen.</p>
-									</div>
-									<div class="product-content">
-											<h3 class="title">Petzolds Lackknete</br>16,90 €</br>inkl. MwSt.</h3>
-											<input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4"/>
-											<button>In den Warenkorb</button>
-									</div>
-							</div>
-					</div>
+              <p class="add-to-cart">Schaumsprühe für die Vorwäsche, hiermit können gröbere Verschmutzungen angelöst werden.</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">Gloria FM10</br>29,99 €</br>inkl. MwSt.</h3>
+              <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button>In den Warenkorb</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
 
-			</div>
-	</div>
-</div>
-	<hr>
-			<!-- footer -->
+              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/61jmMJRxtNL._SL1500_.jpg">
+              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/71gqfzhXf5L._SL1500_.jpg">
 
 
-<div class="footer-basic">
-		<footer>
+              <p class="add-to-cart">Schaumsprüher-Füllung für die Vorwäsche, kann z.B. für die Gloria FM10 genutzt werden.</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">GLORIA Top Foam</br>14,99 €</br>inkl. MwSt.</h3>
+              <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button>In den Warenkorb</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
+
+              <img class="pic-1" src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.polarautovaruste.com%2Fgraphics%2Fproducts%2Fthumbnails%2Fppicn_sonax_autoshampoo_cf6bdbe0.jpg&f=1">
+              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81aZpYobFKL._SL1500_.jpg">
+
+              <p class="add-to-cart">Shampoo für die Autowäsche.</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">SONAX AutoShampoo</br>5,79 €</br>inkl. MwSt.</h3>
+              <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button>In den Warenkorb</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="product-grid2">
+            <div class="product-image2">
+
+              <img class="pic-1" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
+              <img class="pic-2" src="https://images-na.ssl-images-amazon.com/images/I/81iewTV55oL._AC_SY355_.jpg">
+
+
+              <p class="add-to-cart">Lackknete für das Auto, um Verschmutzungen wie Teer, eingebrannte Insekten, Flugrost etc. zu entfernen.</p>
+            </div>
+            <div class="product-content">
+              <h3 class="title">Petzolds Lackknete</br>16,90 €</br>inkl. MwSt.</h3>
+              <input step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-4" />
+              <button>In den Warenkorb</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <hr>
+  <!-- footer -->
+
+
+  <div class="footer-basic">
+    <footer>
       <p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
-		</footer>
-	</div>
-  </body>
+    </footer>
+  </div>
+</body>
+
 </html>
 
 <!-- jquery functions to send the amound of requested Product to the server and the database -->
