--- a/html/order_process.html
+++ b/html/order_process.html
@@ -21,6 +21,12 @@
 			if (document.getElementById('slide1').checked) {
 				document.getElementById('myLink').href = "order_confirm_uber.html";
 			}
+			if (document.getElementById('slide3').checked) {
+				document.getElementById('myLink').href = "order_confirm_Rech.html";
+			}
+			if (document.getElementById('slide2').checked) {
+				document.getElementById('myLink').href = "order_confirm.html";
+			}
 		}
 	</script>
 
