--- a/html/order_confirm.html
+++ b/html/order_confirm.html
@@ -31,6 +31,7 @@
 		<div class="kontakt" style="margin-left:30px;margin-top:15px;">
 			<h1 style="text-align: center;">Vielen Dank für ihre Bestellung!</h1>
 			<h2 style="text-align: center;">Ihre Bestellung vom 12.04.2020 19:45 Uhr:</h2>
+			<h2 style="text-align: center;">Bestellnummer: 12345</h2>
 			<div style="text-align: center;" class="wrapper">
 			<input onclick="window.print()" type="image" src="../img/Drucken.png" alt="Drucken">
 			</div>
@@ -97,7 +98,7 @@
 
 			<h2 style="text-align: center;">Ihre Zahlungsweise: Paypal</h2>
 
-	<div class="column">
+	<div>
 		<h2 style="text-align: left;">Ihre Lieferanschrift:</h2>
 		<p style="text-align: left;">Vorname: Max</p>
 		<p style="text-align: left;">Nachname: Muster</p>
