--- a/html/order_confirm_Rech.html
+++ b/html/order_confirm_Rech.html
@@ -34,6 +34,7 @@
 	<div class="kontakt" style="margin-left:30px;margin-top:15px;">
 		<h1 style="text-align: center;">Vielen Dank für ihre Bestellung!</h1>
 		<h2 style="text-align: center;">Ihre Bestellung vom 12.04.2020 19:45 Uhr:</h2>
+		<h2 style="text-align: center;">Bestellnummer: 12345</h2>
 		<div style="text-align: center;" class="wrapper">
 			<input onclick="window.print()" type="image" src="../img/Drucken.png" alt="Drucken">
 		</div>
@@ -99,7 +100,7 @@
 
 	<h2>Ihre Zahlungsweise: Rechnung</h2>
 
-		<div class="column">
+		<div>
 			<h2 style="text-align: left;">Ihre Lieferanschrift:</h2>
 			<p style="text-align: justify;">Vorname: Max</p>
 			<p style="text-align: justify;">Nachname: Muster</p>
