--- a/html/Warenkorb.html
+++ b/html/Warenkorb.html
@@ -44,7 +44,7 @@
         </tr>
 
         <tr>
-          <td><a href="Verkauf1.html">Gloria FM10</a></td>
+          <td><a href="ALCLEARWaschhandschuh.html">Gloria FM10</a></td>
           <td><input step="1" data-step-max="10" type="number" value="3" data-decimals="0" min="0" max="360" class="col-3" /></td>
           <td>29,99 €</td>
           <td>89,97 €</td>
@@ -52,7 +52,7 @@
     </div>
     </tr>
     <tr>
-      <td><a href="Verkauf1.html">SONAX AutoShampoo</a></td>
+      <td><a href="ALCLEARWaschhandschuh.html">SONAX AutoShampoo</a></td>
       <td><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="0" max="360" class="col-3" /></td>
       <td>5,79 €</td>
       <td>5,79 €</td>
@@ -60,14 +60,14 @@
 
     </tr>
     <tr>
-      <td><a href="Verkauf2.html">Menzerna 400</a></td>
+      <td><a href="ALCLEARWaschhandschuh.html">Menzerna 400</a></td>
       <td><input step="1" data-step-max="10" type="number" value="2" data-decimals="0" min="0" max="360" class="col-3" /></td>
       <td>13,99 €</td>
       <td>27,89 €</td>
       <td><button class="button">X</button></td>
     </tr>
     <tr>
-      <td><a href="Verkauf3.html">SWISSVAX SWIZÖL Autobahn</a></td>
+      <td><a href="ALCLEARWaschhandschuh.html">SWISSVAX SWIZÖL Autobahn</a></td>
       <td><input step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="0" max="360" class="col-3" /></td>
       <td>39,99 €</td>
       <td>39,99 €</td>
